<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.unileipzig.dbs</groupId>
    <artifactId>pprl-core-parent</artifactId>
    <version>2.0</version>

    <packaging>pom</packaging>

    <name>PPRL-Core</name>
    <url>https://dbs.uni-leipzig.de/en</url>

    <organization>
        <name>University of Leipzig</name>
        <url>https://dbs.uni-leipzig.de/en</url>
    </organization>

    <licenses>
        <license>
            <name>Apache 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <dep.log4j.version>2.25.4</dep.log4j.version>
        <dep.junit.version>5.12.2</dep.junit.version>
        <dep.jackson.version>2.21.2</dep.jackson.version>
        <dep.micrometer.version>1.15.4</dep.micrometer.version>
        <dep.tech.tablesaw.version>0.44.4</dep.tech.tablesaw.version>
    </properties>

    <modules>
        <module>pprl-core-common</module>
        <module>pprl-core-analyzer</module>
        <module>pprl-core-encoder</module>
        <module>pprl-core-matcher</module>
    </modules>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${dep.log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${dep.log4j.version}</version>
        </dependency>

        <!-- Metrics -->
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-core</artifactId>
            <version>${dep.micrometer.version}</version>
        </dependency>

        <!-- Serialisation-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${dep.jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-properties</artifactId>
            <version>${dep.jackson.version}</version>
        </dependency>

        <!-- Data management -->
        <dependency>
            <groupId>tech.tablesaw</groupId>
            <artifactId>tablesaw-core</artifactId>
            <version>${dep.tech.tablesaw.version}</version>
        </dependency>
        <dependency>
            <groupId>tech.tablesaw</groupId>
            <artifactId>tablesaw-jsplot</artifactId>
            <version>${dep.tech.tablesaw.version}</version>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${dep.junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>
</project>